# case-conversion

./: README.md  pyproject.toml
.github/workflows/: ci.yml
case_conversion/: __init__.py  alias.py  case_conversion.py  converter.py  parser.py  types.py  utils.py
tests/: test.py  test_conversions.py  test_converter.py  test_internals.py  test_parser.py  test_types.py  test_utils.py
