[tool.poetry]
name = "case-conversion"
version = "3.0.0"
description = "Convert between different types of cases with acronym detection and unicode support."
license = "MIT"
authors = ["Alejandro Frias <joker454@gmail.com>"]
repository = "https://github.com/AlejandroFrias/case-conversion"
readme = "README.md"
keywords = ["case", "string case", "convert", "conversion"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/AlejandroFrias/case-conversion/issues"

[tool.poetry.dependencies]
python = "^3.6"
regex = "^2019.8"

[tool.poetry.dev-dependencies]
mypy = "*"

# flake8
flake8 = "*"
flake8-annotations-coverage = "*"
flake8-blind-except = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-eradicate = "*"
pep8-naming = "*"
wemake-python-styleguide = "*"

# formatting
black = "19.10b0"
blacken-docs = "*"
isort = "*"

# testing
tox = "*"

# pre-commit
pre-commit = "*"
pygments-pre-commit = "*"

# other
radon = "*"
cohesion = "*"
vulture = "*"
flynt = "*"

[tool.isort]
line_length = 88
combine_star = true
known_third_party = []

[tool.black]
line-length = 88
target_version = ['py36']

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38

[testenv]
commands =
  nosetests {posargs:tests}
deps =
  nose
  nose_parameterized
"""

[flake8]
ignore = ",E203,D100,D101,D102,D103,D104,D105,D106,D107,D203,W503,"
exclude = ",.git, .venv, lib/client, __pycache__,"
max-line-length = 88

[mypy]
check_untyped_defs = true
disallow_subclassing_any = true
ignore_missing_imports = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
